; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_avx.c_assert_opmask_eq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_avx.c_assert_opmask_eq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KARRAY_MAX = common dso_local global i32 0, align 4
@karray_str_buf = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Compare failed, opmask A:\0A%s\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"Compare failed, opmask B:\0A%s\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"opmasks not equal\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i64*)* @assert_opmask_eq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_opmask_eq(i64* %0, i64* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  store i64* %0, i64** %3, align 8
  store i64* %1, i64** %4, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %35, %2
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @KARRAY_MAX, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %38

10:                                               ; preds = %6
  %11 = load i64*, i64** %3, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i64, i64* %11, i64 %13
  %15 = load i64, i64* %14, align 8
  %16 = load i64*, i64** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i64, i64* %16, i64 %18
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %15, %20
  br i1 %21, label %22, label %34

22:                                               ; preds = %10
  %23 = load i64*, i64** %3, align 8
  %24 = load i32, i32* @karray_str_buf, align 4
  %25 = call i32 @opmask_to_string(i64* %23, i32 %24)
  %26 = load i32, i32* @karray_str_buf, align 4
  %27 = call i32 @T_LOG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %26)
  %28 = load i64*, i64** %4, align 8
  %29 = load i32, i32* @karray_str_buf, align 4
  %30 = call i32 @opmask_to_string(i64* %28, i32 %29)
  %31 = load i32, i32* @karray_str_buf, align 4
  %32 = call i32 @T_LOG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i32 %31)
  %33 = call i32 @T_ASSERT_FAIL(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  br label %34

34:                                               ; preds = %22, %10
  br label %35

35:                                               ; preds = %34
  %36 = load i32, i32* %5, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %5, align 4
  br label %6

38:                                               ; preds = %6
  ret void
}

declare dso_local i32 @opmask_to_string(i64*, i32) #1

declare dso_local i32 @T_LOG(i8*, i32) #1

declare dso_local i32 @T_ASSERT_FAIL(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
